--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
+	<link rel="shortcut icon" href="#">
 	<meta charset="UTF-8">
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -15,7 +16,7 @@
 <header class="header">
 	<form class="todo-control">
 		<label><input class="header-input" type="text" placeholder="Какие планы?"></label>
-		<button class="header-button" id="add"></button>
+		<button class="header-button" id="add" onclick="this.reset();"></button>
 	</form>
 </header>
 
