--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="header">
 	<form class="todo-control">
 		<label><input class="header-input" type="text" placeholder="Какие планы?"></label>
-		<button class="header-button" id="add" onclick="this.reset();"></button>
+		<button class="header-button" id="add"></button>
 	</form>
 </header>
 
