--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload" href="./font/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="./css/style.min.css">
+    <script src = 'script.js' defer></script>
+    <title>Document</title>
+</head>
 
     <title>Document</title>
 </head>
@@ -125,7 +128,6 @@
 
     </div>
 
-<script src="script.js"></script>
 </section>
 </body>
 </html>
