--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="./images/favicon/site.webmanifest">
 	<link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#b91d47">
 	<meta name="theme-color" content="#ffffff">
@@ -130,7 +131,7 @@
 		</div>
 
 
-		<div class="service-tab row">
+		<div class="service-tab row d-none">
 			<div class="col-md-6 col-sm-6">
 				<img src="images/service/service-2.png" alt="">
 			</div>
@@ -146,7 +147,7 @@
 		</div>
 
 
-		<div class="service-tab row">
+		<div class="service-tab row d-none">
 			<div class="service-outer col-md-6 col-sm-6 col-12">
 				<div class="service-inner">
 					<p>Услуга, направленная на разработку дизайна с анимацией, дизайн интерьера и экстерьера</p>
@@ -178,12 +179,6 @@
 			<a href="#" class="portfolio-btn prev" id="arrow-left"></a>
 			<a href="#" class="portfolio-btn next" id="arrow-right"></a>
 			<ul class="portfolio-dots">
-				<li class="dot dot-active"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
 			</ul>
 		</ul>
 	</div>
@@ -195,7 +190,7 @@
 		<div class="underline"></div>
 		<div class="row">
 			<div class="col-lg-6 d-none d-lg-block flex">
-				<img src="images/calc/flat.jpg" alt="Офис">
+				<img src="images/calc.jpg" alt="">
 			</div>
 			<div class="col-lg-6 col-12 flex">
 				<div class="calc-block">
@@ -236,7 +231,6 @@
 				<div class="companies-hor-item"><img src="images/companies/companies-5.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-6.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-7.png" alt=""></div>
-				<div class="companies-hor-item"><img src="images/companies/companies-8.png" alt=""></div>
 			</div>
 		</div>
 	</div>
@@ -287,8 +281,10 @@
 		<div class="quote">
 			<img class="cov-left" src="images/command/cov-1.png" alt="">
 			<div class="description">Ты - то, что ты делаешь!</div>
-			<p>А в начале пути мало, кто в нас верил, не правда ли?</p>
-			<span>Quentin Tarantino</span>
+			<p>То, что мы делаем, определяет то, кем мы являемся. Люди чувствуют старание и чувствуют
+				неаккуратность.
+				Это<br> связано с уважением друг к другу, так что небрежность - это неуважение к самому себе.</p>
+			<span>Ислам Куаныш</span>
 			<p>Директор</p>
 			<img class="cov-right" src="images/command/cov-2.png" alt="">
 		</div>
