--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Услуги по 3D моделированию</title>
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/spinkit.min.css">
 	<link rel="stylesheet" href="./css/style.min.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
@@ -412,6 +413,6 @@
 		</div>
 	</div>
 </div>
-<script src='script.js'></script>
+<script src='script/script.js'></script>
 </body>
 </html>
